--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y",
+  "name": "i_love_u",
   "version": "0.1.0",
   "description": "For people who hate programmers.",
   "main": "index.js",
