Dev. checkpoint. Tests don't pass.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "englishy": ">0.3.0",
     "humane_list": "*",
-    "array_surgeon": "*",
-    "funcy_perm": ">v0.1.0",
+    "array_surgeon": ">0.2.1",
+    "funcy_perm": ">0.1.0",
     "string_da99": ">0.1.1",
     "underscore": "*",
     "rw_ize": "*"
