Dev. checkpoint. Tests still don't pass.

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "englishy": ">0.3.0",
     "humane_list": "*",
-    "array_surgeon": ">0.2.1",
+    "array_surgeon": ">0.2.2",
     "funcy_perm": ">0.1.0",
     "string_da99": ">0.1.1",
     "underscore": "*",
-    "rw_ize": "*"
+    "rw_ize": ">0.1.0"
   },
   "scripts": {
     "test": "mocha"
