--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "funcy_perm": ">0.1.0",
     "string_da99": ">0.1.1",
     "underscore": "*",
-    "cheerio": "*",
-    "rw_ize": ">0.1.1"
+    "cloneextend": "*",
+    "rw_ize": ">0.1.2", 
+    "xregexp": "*"
   },
   "scripts": {
     "test": "mocha"
